--- a/app/globals.css
+++ b/app/globals.css
@@ -70,11 +70,6 @@ body {
 }
 
 .intl-phone-input .PhoneInputInput {
-  --tw-bg-opacity: 1;
-  background-color: hsl(
-    var(--heroui-default-100) /
-      var(--heroui-default-100-opacity, var(--tw-bg-opacity))
-  );
   outline: none;
 }
 
@@ -88,7 +83,7 @@ body {
 .Toastify__toast {
   padding: 0px !important;
   border-radius: 4px !important;
-  min-height: 60px !important;
+  /* min-height: 60px !important; */
   --tw-shadow: 0px 2px 18px 0px rgba(0, 0, 0, 0.15);
   --tw-shadow-colored: 0px 2px 18px 0px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -96,7 +91,7 @@ body {
 }
 
 .Toastify__toast-container--top-right {
-  top: 64px !important;
+  top: 40px !important;
   right: 30px !important;
 }
 
@@ -106,13 +101,13 @@ body {
 }
 
 .toast-container {
-  min-height: 60px;
+  /* min-height: 60px; */
   display: flex;
 }
 
 .toast-identifier {
-  height: 100%;
-  width: 8px;
+  min-height: 65px;
+  width: 6px;
   margin-right: 16px;
 }
 
