--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --blue: #506efe;
+  --border-color: #dee3e7;
+  --background-lightGrey: #f2f2f2;
+  --green: #79c736;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -150,4 +154,84 @@ body {
 
 .partner-img:hover {
   width: 100px;
+}
+
+.stepper .step:first-of-type {
+  border-top-left-radius: 3rem;
+  border-bottom-left-radius: 3rem;
+  border-left: 1px solid var(--border-color);
+}
+
+.stepper .step:last-of-type {
+  border-top-right-radius: 3rem;
+  border-bottom-right-radius: 3rem;
+  border-right: 1px solid var(--border-color);
+}
+
+.stepper .step:not(:last-of-type)::before {
+  content: " ";
+  display: block;
+  width: 0px;
+  height: 0px;
+  border-top: 1.5rem solid transparent;
+  border-bottom: 1.5rem solid transparent;
+  border-left: 1.5rem solid var(--border-color);
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
+  right: -2.3rem;
+}
+
+.stepper .step:not(:last-of-type)::after {
+  content: " ";
+  display: block;
+  width: 0px;
+  height: 0px;
+  border-top: 1.5rem solid transparent;
+  border-bottom: 1.5rem solid transparent;
+  border-left: 1.5rem solid white;
+  position: absolute;
+  bottom: 0px;
+  z-index: 2;
+  right: -2.25rem;
+}
+
+.stepper .step:not(:first-of-type) {
+  padding-left: 3rem;
+}
+
+.stepper .step.active .step-number {
+  opacity: 1;
+  color: #ffffff;
+  background-color: var(--blue);
+  border: 1px solid var(--blue);
+}
+
+.stepper .step.completed .step-number {
+  background-color: var(--green);
+  border: 1px solid var(--green);
+}
+
+.stepper .step.active .step-title,
+.stepper .step.completed .step-title {
+  color: var(----foreground);
+}
+
+.stepper .step-number {
+  color: #b9b9b9;
+  background-color: #f2f2f2;
+  border: 1px solid var(--border-color);
+  transition: 0.3s;
+  opacity: 1;
+}
+
+.stepper .step-title {
+  color: #b9b9b9;
+}
+
+.stepper .step {
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-top-color: var(--border-color);
+  border-bottom-color: var(--border-color);
 }
