--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --blue: #506efe;
+  --blue: #3d5fff;
   --border-color: #dee3e7;
   --border-grey: #e0e0e0;
   --background-lightGrey: #f2f2f2;
