--- a/app/globals.css
+++ b/app/globals.css
@@ -243,3 +243,14 @@ body {
   border-width: 1px;
   border-color: var(--border-grey);
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
