--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --blue: #3d5fff;
   --border-color: #dee3e7;
   --border-grey: #e0e0e0;
+  --background-grey: #f5f7f9;
   --background-lightGrey: #f2f2f2;
   --green: #79c736;
 }
