--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
   --background-grey: #f5f7f9;
   --background-lightGrey: #f2f2f2;
   --green: #79c736;
+  --container-box-shadow: 0px 3px 17px 0px #0000001a;
 }
 
 /* @media (prefers-color-scheme: dark) {
