--- a/app/globals.css
+++ b/app/globals.css
@@ -261,3 +261,8 @@ input[type="number"] {
   backdrop-filter: blur(1.5px);
   background-color: hwb(0deg 15.94% 84.06% / 25%);
 }
+
+.product-image:hover img {
+  transform: scale(0.8);
+  opacity: 0.8;
+}
